--- a/src/references.bib
+++ b/src/references.bib
@@ -36,3 +36,34 @@
   year          = {2007},
   copyright     = {Assumed arXiv.org perpetual,  non-exclusive license to distribute this article for submissions made before January 2004}
 }
+@book{lecerf,
+  title         = {Logique math{\'e}matique: 1. Machines de Turing r{\'e}versibles. R{\'e}cursive insolubilit{\'e} en n epsilon ny de l'{\'e}quation u},
+  author        = {Lecerf, Y. and Communaut{\'e} Europ{\'e}enne de l'{\'e}nergie atomique - Euratom (Bruxelles)},
+  url           = {https://books.google.it/books?id=e1xjGwAACAAJ},
+  year          = {1964},
+  publisher     = {Euratom}
+}
+@article{bennett,
+  title         = {Logical Reversibility of Computation},
+  volume        = {17},
+  issn          = {0018-8646},
+  url           = {http://dx.doi.org/10.1147/rd.176.0525},
+  doi           = {10.1147/rd.176.0525},
+  number        = {6},
+  journal       = {IBM Journal of Research and Development},
+  publisher     = {IBM},
+  author        = {Bennett,  C. H.},
+  year          = {1973},
+  month         = nov,
+  pages         = {525–532}
+}
+@article{deutsch,
+  title         = {Quantum theory, the Church--Turing principle and the universal quantum computer},
+  author        = {Deutsch, David},
+  journal       = {Proceedings of the Royal Society of London. A. Mathematical and Physical Sciences},
+  volume        = {400},
+  number        = {1818},
+  pages         = {97--117},
+  year          = {1985},
+  publisher     = {The Royal Society London}
+}
