--- a/src/references.bib
+++ b/src/references.bib
@@ -67,3 +67,16 @@
   year          = {1985},
   publisher     = {The Royal Society London}
 }
+@article{dj,
+  volume        = {439},
+  issn          = {2053-9177},
+  url           = {http://dx.doi.org/10.1098/rspa.1992.0167},
+  doi           = {10.1098/rspa.1992.0167},
+  number        = {1907},
+  journal       = {Proceedings of the Royal Society of London. Series A: Mathematical and Physical Sciences},
+  publisher     = {The Royal Society},
+  year          = {1992},
+  month         = dec,
+  pages         = {553–558},
+  author        = {Deutsch, Josza}
+}
