tests for laptop

--- a/src/Quantum Computing.tex
+++ b/src/Quantum Computing.tex
@@ -887,6 +887,8 @@ Note that in this algorithm $q_0$ are actually $n$ qubits. Before proving the co
 
 TODO \todo{find a way to draw it}
 
+TODO \todo{da scrivere e dim}
+
 \printbibliography % UNCOMMENT FOR BIBLIOGRAPHY
 
 \end{document}
